manifests/default/szurubooru/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: szurubooru
  labels:
    app: szurubooru
spec:
  replicas: 1
  selector:
    matchLabels:
      app: szurubooru
  template:
    metadata:
      labels:
        app: szurubooru
    spec:
      containers:
      - name: client
        image: szurubooru/client:latest
        volumeMounts:
        - name: data
          mountPath: /data
          readOnly: true
      - name: server
        image: szurubooru/server:latest
        volumeMounts:
        - name: data
          mountPath: /data
      - name: postgres
        image: postgres:11-alpine
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
        ports:
        - containerPort: 5853
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: szurubooru-data-pvc
      - name: postgres-data
        persistentVolumeClaim:
          claimName: szurubooru-postgres-pvc
