manifests/default/szurubooru/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
spec:
  selector:
    app: szurubooru
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: szurubooru
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: server
spec:
  selector:
    app: szurubooru
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
